--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -28,12 +28,12 @@
 
         <div
           class="xl:w-96 max-lg:w-full lg:ml-10 max-md:mt-4 max-lg:ml- focus:bg-transparent px-6 rounded h-11 outline-[#333] text-sm transition-all">
-          <form class="max-w-md mx-auto">
+          <form [formGroup]="searchForm" (ngSubmit)="onSearch()" class="max-w-md mx-auto">
             <label for="default-search"
               class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
             <div class="relative min-w-[438px]">
-              <input type="search" id="default-search"
-                class="w-full block px-4 py-3 ps-10 text-sm text-gray-900 border border-gray-300 rounded-[20px]  focus:ring-blue-500 focus:border-blue-500 bg-white dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              <input type="search" id="default-search" formControlName="keywords"
+                class="w-full block px-4 py-3 ps-10 text-sm text-black border border-gray-300 rounded-[20px]  focus:ring-blue-500 focus:border-blue-500 bg-white dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 placeholder="Search any things" required />
               <button type="submit"
                 class="text-white absolute end-0 top-0 h-full px-8 rounded-[20px] bg-[#EDA415] hover:bg-[#EDA415] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm py-2">Search</button>
@@ -45,12 +45,14 @@
 
           <ul class='flex items-center'>
             <li class='max-sm:hidden flex text-[15px] max-lg:py-2 px-3 font-medium text-white cursor-pointer'>
-              <span class="ti-user w-[20px] h-[20px] mr-2 mt-1 text-white"></span>
-              Sign in
+              <a href="client/login"> <span class="ti-user w-[20px] h-[20px] mr-2 mt-1 text-white"></span>
+                Sign in</a>
             </li>
             <li class='max-sm:hidden flex text-[15px] max-lg:py-2 px-3 font-medium text-white cursor-pointer'>
-              <span class="ti-heart w-[20px] h-[20px] mr-2 mt-1 text-white"></span>
-              wishlist
+              <a href="admin/dashboad">
+                <span class="ti-heart w-[20px] h-[20px] mr-2 mt-1 text-white"></span>
+                wishlist
+              </a>
             </li>
             <li class='max-sm:hidden flex text-[15px] max-lg:py-2 px-3 font-medium text-white cursor-pointer'>
               <a href="/cart" class="flex items-center"><span
@@ -79,9 +81,23 @@
               class='hover:text-yellow-300 text-[#3A3A3A] text-[15px] font-medium block min-w-16 text-sm'>Home</a>
             <span class="ti-angle-down text-sm ml-2"></span>
           </li>
-          <li class='max-lg:border-b max-lg:py-4 px-4 flex items-center'><a href='/product-category'
+          <li class='relative max-lg:border-b max-lg:py-4 px-4 flex items-center Nav'><a href='client/product-category'
               class='hover:text-yellow-300 text-[#3A3A3A] text-[15px] font-medium block min-w-16 text-sm'>Catalog</a>
             <span class="ti-angle-down text-sm ml-2"></span>
+            <ul class="Sub_nav absolute min-w-36 top-9 right-5 bg-slate-300">
+              @for (item of category; track $index) {
+              <!-- <a routerLink="product-category/{{item.id}}">
+                <li class="cursor-pointer hover:opacity-80 py-2 px-5 w-full ">
+                  {{item.name}}</li>
+              </a> -->
+              <!-- (click)="onItemClick(item.id!) -->
+              <a href="client/product-category/{{item.id}}">
+                <li class="cursor-pointer hover:text-yellow-500 py-2 px-5 w-full">
+                  {{item.name}}
+                </li>
+              </a>
+              }
+            </ul>
           </li>
           <li class='max-lg:border-b max-lg:py-4 px-4 flex items-center'><a href='javascript:void(0)'
               class='hover:text-yellow-300 text-[#3A3A3A] text-[15px] font-medium block min-w-16 text-sm'>Blog</a>
